# Zepra

./: .gitmodules  CMakeLists.txt  RELEASE_NOTES.md  build.sh  build_all.txt  build_errors.txt  build_full.txt  build_stdout.txt  install.sh
.github/: FUNDING.yml
UI/panels/: feedback_panel.h
build-win/: README.md
build-win/test/zeprascript/: zeprascript-integration-tests[1]_include.cmake  zeprascript-unit-tests[1]_include.cmake
docs/: beta-css-status.html  beta-guide.html  js-dom-bridge-gap.html  todo.html
docs/zeprascript/: bytecode-spec.md  jit-tiers.md
installer/: README.md
installer/linux/: build-appimage.sh  build-deb.sh  install-zepra.sh  zepra-browser.desktop
installer/macos/: Info.plist  build-dmg.sh
installer/windows/: Install-ZepraBrowser.ps1  Uninstall-ZepraBrowser.ps1  build-installer.ps1
legal/: EULA.md  EULA.txt
reports/: ZepraConfigVersion.md
source/: main.cpp  update_checker.cpp  update_checker.h  version.h.in
source/integration/: nxfont.h  zepra_browser.cpp
source/nxrender-cpp/: CMakeLists.txt
source/nxrender-cpp/core/: render_tile.cpp
source/nxrender-cpp/input/: clipboard.cpp
source/nxrender-cpp/nxgfx/: batch_renderer.cpp  filter_pipeline.cpp  render_target.cpp
source/nxrender-cpp/platform/: windows_wgl.cpp
source/nxrender-cpp/web/: table_and_media.cpp  table_and_media.h
source/platform/: CMakeLists.txt
source/platform/include/platform/: clipboard.hpp  window_system.hpp
source/platform/src/: clipboard.cpp
source/platform/src/auth/: zepra_auth.cpp
source/platform/src/windows/: window_system_win.cpp
source/storage/: CMakeLists.txt
source/webCore/: CMakeLists.txt
source/webCore/browser/: dom.hpp  layout_engine.cpp  layout_engine.h
source/webCore/css/: css_computed_style.hpp  style_resolver.cpp
source/webCore/dom/: dom_event.hpp  dom_node.cpp  dom_node.hpp
source/webCore/html/: html_parser.cpp  html_tokenizer.cpp  html_tokenizer.hpp  html_tree_constructor.cpp  html_tree_constructor.hpp
source/webCore/rendering/: font_face.cpp  font_face.hpp  font_manager.cpp  (+1 more)
source/zepraScript/: CMakeLists.txt  TODO.md  architecture.md  config.hpp
test/: CMakeLists.txt
test/htmltest/: dom_test.html
(+21 files in other folders)
